# huihui-graduation-server

./: AGENTS.md  API.md  CLAUDE.md  Cargo.toml  api.md  codex.md  conventions.md  db.sql  db2_before_add_food_contribute.sql  f.md  food_attribute.sql  food_comment_api.md  food_recommendation_api.md  suggestion.md
.codex/environments/: environment.toml
api/: image-search.md
api/exercise-record/: README.md
api/exercise-type/: README.md
api/meal-record/: README.md
api/user/calorie-goal/: README.md
src/: lib.rs  main.rs
src/handlers/: auth.rs  exercise_record.rs  exercise_type.rs  food.rs  food_comment.rs  food_recog.rs  image_search.rs  meal_record.rs  mod.rs  restaurant.rs  static_files.rs  suggestion.rs  tag.rs  topic.rs  upload.rs  user_calorie_goal.rs  user_profile.rs
src/model/: input.rs  mod.rs  output.rs  raw.rs
src/service/: auth.rs  error.rs  exercise_record.rs  exercise_type.rs  food.rs  food_attribute.rs  food_comment.rs  image_search.rs  meal_record.rs  mod.rs  rc.rs  restaurant.rs  suggestion.rs  tag.rs  topic.rs  user_calorie_goal.rs  user_profile.rs
src/source/: exercise_record.rs  exercise_type.rs  food.rs  food_attribute.rs  food_comment.rs  meal_record.rs  mod.rs  operation.rs  restaurant.rs  suggestion.rs  tag.rs  todo_log.rs  topic.rs  topic_like.rs  user.rs  user_calorie_goal.rs  user_profile.rs
tests/: a.rs
