[package]
name = "huihui-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
faithea = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", ] }#"tls-rustls"
tokio = { version = "1.49.0", features = ["macros"] }
rand = "0.10.0"
log = "0.4.29"
